		rearranged accordingly.
  - NEW: Allow single parameter to parameters loci, ploidy in initByValue and initByFreq.
  - NEW: Remove parameter chrom from dumper(), allow single parameter input for 
		parameter loci in this operator.
  - NEW: Add pause operator to accept specified keys.
  - CHG: Remove rarely used parameters preStmts and postStmts from operators pyEval and
		pyExec.
		

version 0.9.1 - (Rev 2330) Jan 13, 2009
  - NEW: Improve allele iterator so that stat(alleleFreq) can handle chromosome x and y.
  - CHG: Raise an error when there is no male or female in a diploid parents chooser.
  - CHG: Remove parameter newSubPopSizeExpr and rename newSubPopSize to subPopSize,
		and newSubPopSizeFunc to subPopSizeFunc.
  - CHG: Merge parameters subPopSize and subPopSizeFunc. This parameter can now
		take both a list and a function.
  - BUG: Fix population load/save under windows, add simulator equality test (__cmp__).
  - CHG: Merge parameters numOffspringFunc, numOffspringParam and mode to numOffspring
        in offspringGenerator.
  - CHG: Merge parameter sexParam to sexMode in offspringGenerator.
  - CHG: Rename mating scheme binomialSelection to randomSelection.
  - CHG: Merge parameters convProb, convMode and convParam to convMode in
		recombinator.
  - BUG: Fix option shuffleOffspring in heteroMating().
  - CHG: Change the default output of parentsTagger when only one parent is passed.
  - CHG: Remove parameter numParents from offspringGenerator and parent choosers.
  - CHG: Rename pyMating to homoMating. Remove unused parameters subPop and weight
		from heteroMating.
  - NEW: Allow a demographic function to return a number if there is only one
		subpopulation.
  - NEW: Allow pedigreeMating to set sex, affection status and some information
		fields from the pedigree object.
  - NEW: Allow random parent(s) choosers to set name of information field fitness.
  - CHG: Change interface for pedigree::locateRelatives. Rename setIndexOfRelatives