@@ -742,13 +742,6 @@ pyExecRef
 
 
 \backslash
-infoEvalRef
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
 infoExecRef
 \end_layout
 
